--- a/custom-solution-config-package-json/00-start/package.json
+++ b/custom-solution-config-package-json/00-start/package.json
@@ -1,7 +1,7 @@
 {
   "name": "poc-matrux-react",
   "version": "1.0.0",
-  "description": "Sample React App",
+  "description": "Sample react app",
   "main": "index.js",
   "scripts": {
     "start": "npm run start:dev",
@@ -47,5 +47,12 @@
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.4.1",
     "webpack-merge": "^4.2.1"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "setupFiles": [
+      "./config/test/polyfills.js"
+    ],
+    "restoreMocks": true
   }
 }
