--- a/custom-solution-jest-config-file/01-implemented/.vscode/launch.json
+++ b/custom-solution-jest-config-file/01-implemented/.vscode/launch.json
@@ -6,6 +6,7 @@
       "request": "launch",
       "name": "Jest single run all tests",
       "program": "${workspaceRoot}/node_modules/jest/bin/jest.js",
+      "env": { "CI": "true" },
       "args": [
         "-c",
         "./config/test/jest.json",
