--- a/custom-solution-jest-config-file/01-implemented/package.json
+++ b/custom-solution-jest-config-file/01-implemented/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "poc-matrux-react",
+  "name": "sample-project",
   "version": "1.0.0",
   "description": "Sample React App",
   "main": "index.js",
